fix: adjust heading sizes in app.css for better readability

--- a/src/app.css
+++ b/src/app.css
@@ -70,15 +70,15 @@
 		}
 
 		h1 {
-			@apply text-3xl;
-		}
-
-		h2 {
 			@apply text-2xl;
 		}
 
-		h3 {
+		h2 {
 			@apply text-xl;
+		}
+
+		h3 {
+			@apply text-lg;
 		}
 
 		/* paragraph */
